back: Implement the SecurityConfig and jwtRequestFilter

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# Configuration JWT
+jwt.secret=${JWT_SECRET}
